--- a/P007975.opf/meta.yml
+++ b/P007975.opf/meta.yml
@@ -3,5 +3,17 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG13764
   title: བོད་ཀྱི་ནང་མ་སྟོད་གཞས་ཀྱི་སྒྲ་གདངས།
-  volume: ''
+  volume:
+    2cf96bd6b9ae47beaeb98bae27b4b23b:
+      image_group_id: I1KG14949
+      title: Volume 1 of bod kyi nang ma stod gzhas kyi sgra gdangs/
+      volume_number: 1
+      total_pages: 146
   author: ''
+ebook_metadata:
+  title: བོད་ཀྱི་ནང་མ་སྟོད་གཞས་ཀྱི་སྒྲ་གདངས།
+  author: ''
+  sku: P007975
+  cover: cover.jpg
+  layers:
+  - pagination
