--- a/P007975.opf/meta.yml
+++ b/P007975.opf/meta.yml
@@ -1,15 +1,16 @@
-id: opecha:P007975
+id: P007975
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG13764
   title: བོད་ཀྱི་ནང་མ་སྟོད་གཞས་ཀྱི་སྒྲ་གདངས།
-  volume:
+  author: ''
+  volumes:
     2cf96bd6b9ae47beaeb98bae27b4b23b:
       image_group_id: I1KG14949
       title: Volume 1 of bod kyi nang ma stod gzhas kyi sgra gdangs/
       volume_number: 1
       total_pages: 146
-  author: ''
+      base_file: v001.txt
 ebook_metadata:
   title: བོད་ཀྱི་ནང་མ་སྟོད་གཞས་ཀྱི་སྒྲ་གདངས།
   author: ''
