--- a/P007975.opf/meta.yml
+++ b/P007975.opf/meta.yml
@@ -5,11 +5,12 @@ source_metadata:
   title: བོད་ཀྱི་ནང་མ་སྟོད་གཞས་ཀྱི་སྒྲ་གདངས།
   author: ''
   volumes:
-    218a56512cc74d708bf6725ba5d0e3c4:
+    2cf96bd6b9ae47beaeb98bae27b4b23b:
       image_group_id: I1KG14949
-      title: ''
+      title: Volume 1 of bod kyi nang ma stod gzhas kyi sgra gdangs/
       volume_number: 1
       total_pages: 146
+      base_file: v001.txt
 ebook_metadata:
   title: བོད་ཀྱི་ནང་མ་སྟོད་གཞས་ཀྱི་སྒྲ་གདངས།
   author: ''
