--- a/P007975.opf/layers/v001/Pagination.yml
+++ b/P007975.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: b42d4e66cd9a498792a0f24392b344c0
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   ed4a21c04ddb41cdaeffbd9f78d9390c:
